updated vegas bg image with updated image -- currently using bg-fixed.png for the showcase background so that the entire picture was on the page and not cropping out too much of the skyline.

--- a/app/webroot/css/splash.css
+++ b/app/webroot/css/splash.css
@@ -20,7 +20,7 @@ body {
 }
 
 .bg-top {
-	background: url('bg-top.jpg') no-repeat 50% 50%;
+	background: url('bg-top.png') no-repeat 50% 50%;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
