--- a/assets/unlokt-less/less/filter.less
+++ b/assets/unlokt-less/less/filter.less
@@ -42,10 +42,12 @@
 .showcase {
 	position: relative;
 	height: 300px;
-	background-repeat: no-repeat;
-	background-position: 50% 50%;
+	background: @schemeGrayDark url('@{assetPath}img/bg-fixed.png') 50% 50% no-repeat;
+	// background-color: $schemeGrayDark;
+	// background-repeat: no-repeat;
+	// background-position: 50% 50%;
 	z-index: 1;
-	.background-size(cover);
+	// .background-size(cover);
 
 	// &:after {
 	// 	display: block;
